@@ -1,3 +1,7 @@
+2004-03-28  ujwal
+
+	* Initial Rendezvous support.
+
 2004-03-26  fabian
 
 	* Merged in the French localization by Matt Anton
